--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "9.0.5",
     "react": "16.9.0",
     "react-dom": "16.9.0",
+    "react-ga": "^2.6.0",
     "react-toastify": "^5.3.2",
     "styled-components": "^4.3.2"
   },
